--- a/src/app/flextable/flextable.component.css
+++ b/src/app/flextable/flextable.component.css
@@ -1,4 +1,5 @@
 @import '~perfect-scrollbar/css/perfect-scrollbar.css';
+
 .example-container {
     display: flex;
     flex-direction: column; 
@@ -50,4 +51,15 @@
     margin: -10px;
     padding: 0;
   }
-  
+  mat-cell {
+    overflow: visible;
+  }
+  td.mat-cell, td.mat-footer-cell, th.mat-header-cell {
+    padding: 3px;
+    border-bottom-width: 0;
+    border-bottom-style: none;
+}
+
+.grade{
+  cursor: pointer;
+}
