--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 
 body { 
@@ -13,4 +13,16 @@ body {
   .version-info {
     font-size: 8pt;
     float: right;
+  }
+
+  .mat-row.hovered {
+    background: #eee;
+  }
+  
+  .mat-row.highlighted {
+    background: #f5f5af;    
+  }
+
+  mat-cell.mat-cell, mat-header-cell.mat-header-cell {
+    overflow: visible; 
   }
